Nouvelles versions exercice 1 txt et jupyterlab

--- a/Exercice1.ipynb
+++ b/Exercice1.ipynb
@@ -33,6 +33,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e05070c1-57fc-4c90-9c48-72973cd5ecbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --> Exemple : Apache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bf5ea8d0-176b-4673-aae9-108a0c24899d",
    "metadata": {},
    "outputs": [],
@@ -55,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Une API REST est une interface de programmation d'application (API = définitions et protocoles informatiques) qui respecte l'architecture REST (normes)."
+    "# Une API REST est une interface de programmation d'application (API) qui respecte l'architecture REST (règles, normes)."
    ]
   },
   {
